syntax = "proto3";
package GateServer.Status;
message LoginReq
{
    int32 uid=1;
    string token=2;
}
message LoginRsp
{
    int32 error=1;
    int32 uid=2;
    string token=3;
}

message GetChatServerReq
{
    int32 uid=1;
}

message GetChatServerRsp
{
    int32 error=1;
    string host=2;
    string port=3;
    string token=4;
}

service StatusServer
{
    rpc GetChatServer (GetChatServerReq) returns (GetChatServerRsp) {} //GateServer获取ChatServer信息的服务
    rpc Login (LoginReq) returns (LoginRsp) {} //ChatServer进行登录验证的服务
}